--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Team chain</title>
+  <title>Vanila DAAP</title>
   <link rel="stylesheet" href="./src/style.css" />
   
   <!-- JavaScript modules -->
   <script type="module" src="./src/Wallet.ts"></script>
   <script type="module" src="./src/main.ts"></script>
+  <script type="module" src="./src/sideBar.ts"></script>
   
   <!-- UI scripts -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script type="module" src="./global-Ux/loading-ui.js"></script>
-  <script type="module" src="./global-Ux/ui-core.js"></script>
+  <script type="module" src="./src/global-Ux/loading-ui.js"></script>
+  <script type="module" src="./src/global-Ux/ui-core.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
   <header class="topbar">
     <!-- Brand logo and name -->
     <div class="brand">
-      <h1>Team chain</h1>
+      <h1>Vanila Daap</h1>
     </div>
 
     <!-- Wallet connection container -->
